--- a/templates/destaque/index.html.twig
+++ b/templates/destaque/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Imóveis em Destaque{% endblock %}
+{% block breadcrumb %}Imóveis em Destaque{% endblock %}
 
 {% block body %}
 Não disponível ainda.
