--- a/templates/imobiliaria_atuacao/new.html.twig
+++ b/templates/imobiliaria_atuacao/new.html.twig
@@ -1,13 +1,13 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}New ImobiliariaAtuacao{% endblock %}
+{% block breadcrumb %}New ImobiliariaAtuacao{% endblock %}
 
 {% block body %}
     <h1>Create new ImobiliariaAtuacao</h1>
 
     {{ include('imobiliaria_atuacao/_form.html.twig') }}
 
-    <a href="{{ path('imobiliaria_atuacao_index') }}">back to list</a>
+    <a href="{{ path('imobiliaria_atuacao_index') }}">Voltar</a>
 {% endblock %}
 
 {% block extrajavascript %}
