--- a/templates/user/trocar_senha.html.twig
+++ b/templates/user/trocar_senha.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Seu perfil{% endblock %}
+{% block breadcrumb %}Seu perfil{% endblock %}
 
 {% block body %}
     <h1>Seu perfil</h1>
