--- a/templates/atualizar_locacao/index.html.twig
+++ b/templates/atualizar_locacao/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Atualizar Locação{% endblock %}
+{% block breadcrumb %}Atualizar Locação{% endblock %}
 
 {% block body %}
     <h1>Atualizar Locação</h1>
@@ -33,7 +33,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="22">no records found</td>
+                <td colspan="22">Nenhum registro encontrado</td>
             </tr>
         {% endfor %}
         </tbody>
