--- a/templates/bairro/_delete_form.html.twig
+++ b/templates/bairro/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('bairro_delete', {'id': bairro.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('bairro_delete', {'id': bairro.id}) }}" onsubmit="return confirm('Tem certeza que quer deletar??');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ bairro.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Deletar</button>
 </form>
