--- a/templates/bairro/edit.html.twig
+++ b/templates/bairro/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Edit Bairro{% endblock %}
+{% block breadcrumb %}Edit Bairro{% endblock %}
 
 {% block body %}
     <h1>Edit Bairro</h1>
 
     {{ include('bairro/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('bairro_index') }}">back to list</a>
+    <a href="{{ path('bairro_index') }}">Voltar</a>
 
     {{ include('bairro/_delete_form.html.twig') }}
 {% endblock %}
