--- a/templates/bairro/new.html.twig
+++ b/templates/bairro/new.html.twig
@@ -1,13 +1,13 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}New Bairro{% endblock %}
+{% block breadcrumb %}New Bairro{% endblock %}
 
 {% block body %}
     <h1>Create new Bairro</h1>
 
     {{ include('bairro/_form.html.twig') }}
 
-    <a href="{{ path('bairro_index') }}">back to list</a>
+    <a href="{{ path('bairro_index') }}">Voltar</a>
 {% endblock %}
 
 {% block extrajavascript %}
