--- a/templates/bairro/show.html.twig
+++ b/templates/bairro/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Bairro{% endblock %}
+{% block breadcrumb %}Bairro{% endblock %}
 
 {% block body %}
     <h1>Bairro</h1>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('bairro_index') }}">back to list</a>
+    <a href="{{ path('bairro_index') }}">Voltar</a>
 
-    <a href="{{ path('bairro_edit', {'id': bairro.id}) }}">edit</a>
+    <a href="{{ path('bairro_edit', {'id': bairro.id}) }}">Editar</a>
 
     {{ include('bairro/_delete_form.html.twig') }}
 {% endblock %}
