--- a/templates/imobiliaria_atuacao/edit.html.twig
+++ b/templates/imobiliaria_atuacao/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Edit ImobiliariaAtuacao{% endblock %}
+{% block breadcrumb %}Edit ImobiliariaAtuacao{% endblock %}
 
 {% block body %}
     <h1>Edit ImobiliariaAtuacao</h1>
 
     {{ include('imobiliaria_atuacao/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('imobiliaria_atuacao_index') }}">back to list</a>
+    <a href="{{ path('imobiliaria_atuacao_index') }}">Voltar</a>
 
     {{ include('imobiliaria_atuacao/_delete_form.html.twig') }}
 {% endblock %}
