--- a/templates/imobiliaria_atuacao/show.html.twig
+++ b/templates/imobiliaria_atuacao/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}ImobiliariaAtuacao{% endblock %}
+{% block breadcrumb %}ImobiliariaAtuacao{% endblock %}
 
 {% block body %}
     <h1>ImobiliariaAtuacao</h1>
@@ -14,9 +14,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('imobiliaria_atuacao_index') }}">back to list</a>
+    <a href="{{ path('imobiliaria_atuacao_index') }}">Voltar</a>
 
-    <a href="{{ path('imobiliaria_atuacao_edit', {'id': imobiliaria_atuacao.id}) }}">edit</a>
+    <a href="{{ path('imobiliaria_atuacao_edit', {'id': imobiliaria_atuacao.id}) }}">Editar</a>
 
     {{ include('imobiliaria_atuacao/_delete_form.html.twig') }}
 {% endblock %}
