--- a/templates/imovel/_delete_form.html.twig
+++ b/templates/imovel/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('imovel_delete', {'id': imovel.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class="pull-right" action="{{ path('imovel_delete', {'id': imovel.id}) }}" onsubmit="return confirm('Tem certeza que quer deletar??');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ imovel.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-rounded">Deletar</button>
 </form>
