--- a/templates/pessoa/_form.html.twig
+++ b/templates/pessoa/_form.html.twig
@@ -1,5 +1,8 @@
 <form class="form-horizontal form-padding" method="post">
 
+<fieldset>
+    <legend>Informações Pessoais</legend>
+
     <div class="form-group form-message-light">
         <label class="col-md-3 control-label" for="{{ form.nome.vars['id'] }}">Nome</label>
         <div class="col-md-4">
@@ -41,6 +44,11 @@
             {{ form_widget(form.telefoneSecundario) }}
         </div>
     </div>
+
+</fieldset>
+
+<fieldset>
+    <legend>Endereço</legend>
 
     <div class="form-group form-message-light">
         <label class="col-md-3 control-label" for="{{ form.endereco.vars['id'] }}">Endereço</label>
@@ -91,6 +99,10 @@
         </div>
     </div>
 
-    <button class="btn">{{ button_label|default('Save') }}</button>
+</fieldset>
+    <br>
+    <div class="form-group pull-right">
+        <button class="btn btn-primary btn-rounded">{{ button_label|default('Salvar') }}</button>
+    </div>
 
 </form>
