--- a/templates/tipo_imovel/new.html.twig
+++ b/templates/tipo_imovel/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Cadastrar Tipo de Imóvel{% endblock %}
+{% block breadcrumb %}Cadastrar Tipo de Imóvel{% endblock %}
 
 {% block body %}
     <h1>Create new TipoImovel</h1>
 
     {{ include('tipo_imovel/_form.html.twig') }}
 
-    <a href="{{ path('tipo_imovel_index') }}">back to list</a>
+    <a href="{{ path('tipo_imovel_index') }}">Voltar</a>
 {% endblock %}
