--- a/templates/tipo_imovel/show.html.twig
+++ b/templates/tipo_imovel/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}TipoImovel{% endblock %}
+{% block breadcrumb %}TipoImovel{% endblock %}
 
 {% block body %}
     <h1>TipoImovel</h1>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('tipo_imovel_index') }}">back to list</a>
+    <a href="{{ path('tipo_imovel_index') }}">Voltar</a>
 
-    <a href="{{ path('tipo_imovel_edit', {'id': tipo_imovel.id}) }}">edit</a>
+    <a href="{{ path('tipo_imovel_edit', {'id': tipo_imovel.id}) }}">Editar</a>
 
     {{ include('tipo_imovel/_delete_form.html.twig') }}
 {% endblock %}
