--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Edit Usuário{% endblock %}
+{% block breadcrumb %}Edit Usuário{% endblock %}
 
 {% block extracss %}
 <style>
@@ -15,7 +15,7 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('user_index') }}">Voltar</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
