--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Gerenciar Usuários{% endblock %}
+{% block breadcrumb %}Gerenciar Usuários{% endblock %}
 
 {% block body %}
     <h1>Usuários administradores</h1>
@@ -13,7 +13,7 @@
                 <th>Email</th>
                 <th>Cpf</th>
                 <th>TelefonePrincipal</th>
-                <th>actions</th>
+                <th>Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -25,8 +25,8 @@
                 <td>{{ pessoa.cpf }}</td>
                 <td>{{ pessoa.telefonePrincipal }}</td>
                 <td>
-                    <a href="{{ path('user_show', {'id': pessoa.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': pessoa.id}) }}">edit</a>
+                    <a href="{{ path('user_show', {'id': pessoa.id}) }}">Visualizar</a>
+                    <a href="{{ path('user_edit', {'id': pessoa.id}) }}">Editar</a>
                 </td>
             </tr>
         {% else %}
