--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout-admin.html.twig' %}
 
-{% block title %}Gerenciar Usuários{% endblock %}
+{% block breadcrumb %}Gerenciar Usuários{% endblock %}
 
 {% block body %}
     <h1>Usuário</h1>
@@ -65,18 +65,18 @@
             </tr>
             <tr>
                 <th>Cliente</th>
-                <td>{{ pessoa.cliente ? 'Yes' : 'No' }}</td>
+                <td>{{ pessoa.cliente ? 'Sim' : 'Não' }}</td>
             </tr>
             <tr>
                 <th>Administrador</th>
-                <td>{{ pessoa.administrador ? 'Yes' : 'No' }}</td>
+                <td>{{ pessoa.administrador ? 'Sim' : 'Não' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a href="{{ path('user_index') }}">Voltar</a>
 
-    {# <a href="{{ path('user_edit', {'id': pessoa.id}) }}">edit</a> #}
+    {# <a href="{{ path('user_edit', {'id': pessoa.id}) }}">Editar</a> #}
 
     {# {{ include('user/_delete_form.html.twig') }} #}
 {% endblock %}
